tests/ui/attributes/unknown-attr.stderr
error: cannot find attribute `mutable_doc`
  --> $DIR/unknown-attr.rs:5:4
   |
LL | #![mutable_doc]
   |    ^^^^^^^^^^^ not found in this scope

error: cannot find attribute `dance`
  --> $DIR/unknown-attr.rs:8:3
   |
LL | #[dance] mod a {}
   |   ^^^^^ not found in this scope

error: cannot find attribute `dance`
  --> $DIR/unknown-attr.rs:11:3
   |
LL | #[dance] fn main() {}
   |   ^^^^^ not found in this scope

error: aborting due to 3 previous errors

